# ml

classification/news/: README.md
ensemble/intro/: pyproject.toml
ensemble/intro/src/: adaboost.py  adaboost_m1.py  adaboost_rt.py  baseline.py  entropy.py  gradientboost.py  linear.py  pruning.py  randomforest.py  support.py  weighted.py
ensemble_intro/: README.md  baseline.csv
ensemble_intro/src/: adaboost_r2.py  bagging.py  dstump.py  dtree.py  modelmean.py  modelselect.py  xgradientboost.py  zeror.py
kaggle/: .gitignore  pyproject.toml
kaggle/home_credit_default_risk/: README.md  pyproject.toml
kaggle/home_credit_default_risk/models/: model.py  submission.csv  utils.py
kaggle/home_credit_default_risk/models/kfold_model_pickle/: model_lgb_fold0.pickle  model_lgb_fold1.pickle  model_lgb_fold2.pickle  model_lgb_fold3.pickle  model_lgb_fold4.pickle
kaggle/mlb_forecasting/: README.md
kaggle/mlb_forecasting/model/: model.py  submission.py  submission_lab.py  utils.py
kaggle/titanic/: baseline_model.py  pyproject.toml
kaggle/titanic/models/: lightgbm_model.py  model.py  model_keras.h5  nn_model.py  utils.py
ml_dictionary/: README.md  pyproject.toml
ml_dictionary/notebooks/Chapter01/: 1-2.ipynb
playground/src/: main.py
