[tool.poetry]
name = "Kaggle_env"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["RyotaBannai <ryotala0528@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ydata-profiling = "^4.6.4"
lightgbm = "^4.3.0"
mypy = "^1.8.0"
optuna = "^3.5.0"
pip = "^24.0"
scikit-learn = "^1.4.0"
ipywidgets = "^8.1.2"
ipdb = "^0.13.13"
japanize-matplotlib = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.pydocstyle]
convention = "google"
