[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["RyotaBannai <ryotala0528@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas-profiling = "^3.6.6"
japanize-matplotlib = "^1.1.3"
pip = "^24.0"
ipykernel = "^6.29.2"
cmake = "^3.28.1"
mypy = "^1.8.0"
lightgbm = "^4.3.0"
ipywidgets = "^8.1.2"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
